RD-4: import report data into database table.

--- a/.env
+++ b/.env
@@ -8,3 +8,11 @@ JOB_LIST='[{"job_name": "test_download_report", "base_url": "", "cron": "* * * *
 
 # user settings
 USERS='[{"name": "general", "email": "", "password": ""}]'
+
+# database settings
+DATABASE_ADAPTER=postgresql+psycopg2
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_DATABASE=
+DATABASE_USER=
+DATABASE_PASSWORD=
