RD-8: create database when it not exists.

--- a/.env
+++ b/.env
@@ -11,6 +11,6 @@ USERS='[{"name": "general", "email": "", "password": ""}]'
 DATABASE_ADAPTER=postgresql+psycopg2
 DATABASE_HOST=
 DATABASE_PORT=
-DATABASE_DATABASE=
+DATABASE_DATABASE=asset_management
 DATABASE_USER=
 DATABASE_PASSWORD=
