RD-10: import excel file data into database table.

--- a/.env
+++ b/.env
@@ -14,3 +14,12 @@ DATABASE_PORT=
 DATABASE_DATABASE=asset_management
 DATABASE_USER=
 DATABASE_PASSWORD=
+
+# reports settings
+REPORT_FOLDER=tmp,excel-reports
+ASSET_REPORT=assets.xlsx
+ASSET_REPORT_SHEET=Sheet1
+EMPLOYEE_REPORT=employees.xlsx
+EMPLOYEE_REPORT_SHEET=Sheet1
+TEMP_REPORT=temp.xlsx
+TEMP_REPORT_SHEET=Sheet2
