RD-11: add use of chrome and edge to download report.

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # browser settings
-BROWSER_LIST=firefox
+BROWSER_TIMEOUT=500
 
 # job settigns
 JOB_LIST='[{"job_name": "test_download_report", "base_url": "", "cron": "* * * * *"}]'
