RD-12: export asset info from microsoft endpoint manager(mem).

--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 BROWSER_TIMEOUT=500
 
 # job settigns
-JOB_LIST='[{"job_name": "test_download_report", "base_url": "", "cron": "* * * * *"}]'
+JOB_LIST='[{"job_name": "test_download_sn_report", "base_url": "", "cron": "* * * * *"}]'
 
 # user settings
-USERS='[{"name": "general", "email": "", "password": ""}]'
+USERS='[{"name": "sn", "email": "", "password": ""}, {"name": "mem", "email": "", "password": ""}]'
 
 # database settings
 DATABASE_ADAPTER=postgresql+psycopg2
@@ -19,6 +19,7 @@ DATABASE_PASSWORD=
 REPORT_FOLDER=tmp,excel-reports
 ASSET_REPORT=assets.xlsx
 ASSET_REPORT_SHEET=Sheet1
+ASSET_REPORT_STR_COLUMNS='PO No,资产条码,资产名称,成本中心(charge),资产类别编码,使用公司编码,使用部门编码,员工号,区域编码,所属公司编码,使用期限'
 EMPLOYEE_REPORT=employees.xlsx
 EMPLOYEE_REPORT_SHEET=Sheet1
 TEMP_REPORT=temp.xlsx
