RD-20: change way of export and import mem info.

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 BROWSER_TIMEOUT=500
 
 # job settigns
-JOB_LIST='[{"job_name": "test_download_sn_report", "base_url": "", "cron": "* * * * *"}]'
+JOB_LIST='[{"job_name": "test_download_sn_report", "base_url": "", "cron": "* * * * *"}, {"job_name": "test_download_mem_report", "base_url": "", "cron": "* * * * *"}]'
 
 # user settings
 USERS='[{"name": "sn", "email": "", "password": ""}, {"name": "mem", "email": "", "password": ""}]'
