RD-21: generate device usage report.

--- a/.env
+++ b/.env
@@ -7,13 +7,13 @@ JOB_LIST='[{"job_name": "test_download_sn_report", "base_url": "", "cron": "* * 
 # user settings
 USERS='[{"name": "sn", "email": "", "password": ""}, {"name": "mem", "email": "", "password": ""}]'
 
-# database settings
-DATABASE_ADAPTER=postgresql+psycopg2
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_DATABASE=asset_management
-DATABASE_USER=
-DATABASE_PASSWORD=
+# asset database settings
+ASSET_ADAPTER=postgresql+psycopg2
+ASSET_HOST=
+ASSET_PORT=5432
+ASSET_DATABASE_STR=
+ASSET_USER=
+ASSET_PASSWORD=
 
 # reports settings
 ASSET_REPORT=assets.xlsx
@@ -23,3 +23,11 @@ EMPLOYEE_REPORT=employees.xlsx
 EMPLOYEE_REPORT_SHEET=Sheet1
 TEMP_REPORT=temp.xlsx
 TEMP_REPORT_SHEET=Sheet2
+
+# emp collect database settings
+EMP_COLLECT_ADAPTER=mssql+pyodbc
+EMP_COLLECT_HOST=
+EMP_COLLECT_PORT=1433
+EMP_COLLECT_DATABASE_STR=
+EMP_COLLECT_USER=
+EMP_COLLECT_PASSWORD=
