RD-30: upload temporary employee reports to aws s3.

--- a/.env
+++ b/.env
@@ -27,3 +27,10 @@ EMP_COLLECT_PORT=1433
 EMP_COLLECT_DATABASE_STR=
 EMP_COLLECT_USER=
 EMP_COLLECT_PASSWORD=
+
+# aws settings
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_S3_BUCKET=
+AWS_S3_PREFIX=
