RD-32: send temporary employee report by email.

--- a/.env
+++ b/.env
@@ -28,9 +28,9 @@ EMP_COLLECT_DATABASE_STR=
 EMP_COLLECT_USER=
 EMP_COLLECT_PASSWORD=
 
-# aws settings
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-AWS_S3_BUCKET=
-AWS_S3_PREFIX=
+# smtp settings
+SMTP_SERVER=
+
+# temp employee email settings
+TEMP_EMPLOYEE_EMAIL_SENDER=
+TEMP_EMPLOYEE_EMAIL_IT_SUPPORT_MAILBOX=
