RD-34: refactor method of sending temporary employee data email.

--- a/.env
+++ b/.env
@@ -33,4 +33,5 @@ SMTP_SERVER=
 
 # temp employee email settings
 TEMP_EMPLOYEE_EMAIL_SENDER=
+TEMP_EMPLOYEE_EMAIL_BCC=
 TEMP_EMPLOYEE_EMAIL_IT_SUPPORT_MAILBOX=
