RD-37: modify email recipients.

--- a/.env
+++ b/.env
@@ -32,6 +32,7 @@ EMP_COLLECT_PASSWORD=
 SMTP_SERVER=
 
 # temp employee email settings
-TEMP_EMPLOYEE_EMAIL_SENDER=
+TEMP_EMPLOYEE_EMAIL_FROM=
+TEMP_EMPLOYEE_EMAIL_TO=
 TEMP_EMPLOYEE_EMAIL_BCC=
 TEMP_EMPLOYEE_EMAIL_IT_SUPPORT_MAILBOX=
